--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -15,7 +15,7 @@
             border-radius: 4px;
     
             transform: translateY(-25%);
-            margin: 0 15px;
+            margin: 0 2rem;
         }
     }
     a {
