--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -20,7 +20,7 @@
     }
     a {
         background: var(--blue-300);
-        padding: 5px;
+        padding: 2.5px 5px 5px;
         border-radius: 4px;
         width: 50px;
         height: 50px;
@@ -31,6 +31,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
+        cursor: pointer;
 
         &:hover {
             opacity: 0.8;
