--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -31,6 +31,7 @@
 body {
     background: var(--white);
     color: var(--white);
+    position: relative;
 
     &::-webkit-scrollbar {
         width: 8px;
