--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -31,7 +31,6 @@
 body {
     background: var(--white);
     color: var(--white);
-    position: relative;
 
     &::-webkit-scrollbar {
         width: 8px;
@@ -55,4 +54,8 @@ button {
 a, a:hover {
     color: inherit;
     text-decoration: none;
+}
+
+#page {
+    overflow: hidden;
 }
