--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -34,7 +34,7 @@
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
-            align-items: flex-end;
+            align-items: center;
 
             div {
                 width: 50%;
@@ -42,7 +42,7 @@
                 padding: 0 15px;
 
                 p {
-                    text-align: justify;
+                    text-align: center;
                     font-size: 1rem;
                     line-height: 1.75rem;
                 }
