--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -7,7 +7,7 @@
         margin: 0 auto;
 
         .contact {
-            max-width: 100%;
+            max-width: 700px;
             min-height: 20rem;
             background: rgba(225,225,225, 0.2);
             backdrop-filter: blur( 8px );
@@ -15,12 +15,17 @@
             border-radius: 4px;
     
             transform: translateY(-25%);
-            margin: 0 2rem;
+            margin: 0 auto;
 
             display: flex;
             justify-content: space-around;
             align-items: center;
             flex-wrap: wrap;
+
+            @media (max-width: 500px) {
+                margin: 0 15px;
+            }
+
 
             .picture {
                 overflow: hidden;
@@ -28,10 +33,34 @@
                 width: 150px;
                 border-radius: 50%;
                 background-color: black;
+                margin: 15px 0;
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            .info {
+                text-align: left;
+                margin: 15px 0;
+
+                li {
+                    padding: 5px 0;
+                    
+                    a {
+                        display: flex;
+                        align-items: center;
+
+                        img {
+                            width: 30px;
+                            margin: 0 15px
+                        }
+                    }
+                }
             }
         }
     }
-    a {
+    a.scrollTop {
         background: var(--blue-300);
         padding: 2.5px 5px 5px;
         border-radius: 4px;
